Fix: Footer on tablet is not full width

--- a/theme.css
+++ b/theme.css
@@ -600,6 +600,8 @@ footer .site-navigation ul.menu a {
   .site-header, body:not([class*="elementor-page-"]) .site-main, .site-footer {
     max-width: 500px; }
   .site-header.header-full-width {
+    max-width: 100%; }
+  .site-footer.footer-full-width {
     max-width: 100%; } }
 
 @media (min-width: 768px) {
